--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Flipper</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="/src/style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8"/>
 
 </head>
@@ -24,8 +25,8 @@
         <canvas id="flipperCanvas"></canvas>
     </div>
 </main>
-<script src="/src/detectCollision.js"></script>
 <script src="/src/obstacle.js"></script>
+<script src="/src/detectCollision.js"></script>
 <script src="/src/sketch.js"></script>
 </body>
 </html>
