--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <main style="width: 100%; display: flex">
-    <div style="margin-left: 0; width: 500px">
+    <div style="margin-left: 10px; width: 500px">
         <h1>
             Flipper
         </h1>
