chore: move src files to public dir

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <canvas id="flipperCanvas"></canvas>
     </div>
 </main>
-<script src="/src/obstacle.js"></script>
-<script src="/src/detectCollision.js"></script>
-<script src="/src/sketch.js"></script>
+<script src="/obstacle.js"></script>
+<script src="/detectCollision.js"></script>
+<script src="/sketch.js"></script>
 </body>
 </html>
