--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Flipper</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="/src/style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8"/>
 
 </head>
 <body>
 <main style="width: 100%; display: flex">
-    <div style="margin-left: 0; width: 500px">
+    <div style="margin-left: 10px; width: 500px">
         <h1>
             Flipper
         </h1>
@@ -24,8 +25,8 @@
         <canvas id="flipperCanvas"></canvas>
     </div>
 </main>
-<script src="/src/detectCollision.js"></script>
-<script src="/src/obstacle.js"></script>
-<script src="/src/sketch.js"></script>
+<script src="/obstacle.js"></script>
+<script src="/detectCollision.js"></script>
+<script src="/sketch.js"></script>
 </body>
 </html>
