added basis for new physics

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </main>
 <script src="/obstacle.js"></script>
 <script src="/detectCollision.js"></script>
+<script src="/movement.js"></script>
 <script src="/sketch.js"></script>
 </body>
 </html>
